# VideoTools

./: .gitignore  Makefile  ReadMe.md  help.txt  main.py  pyproject.toml  transcricao.txt
source/: cortes.txt  transcricao.txt
tests/: test_conversoes.py  test_extracao_texto.py  test_youtube_download.py
videotools/: chunks.py  converter.py  download_video.py  talkgpt.py  test.py  transcribe.py
