[tool.poetry]
name = "videotools"
version = "0.1.0"
description = "Transcribe and Cut Videos"
authors = ["Leo Bezerra"]
license = "MIT"


[tool.poetry.dependencies]

python = "^3.10"
SpeechRecognition = "^3.10.0"
moviepy = "^1.0.3"
pydub = "^0.25.1"
g4f = "^0.1.7.6"
pytube = "^15.0.0"
openai-whisper = "^20230918"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
